--- a/net/ipv4/Kconfig
+++ b/net/ipv4/Kconfig
@@ -614,6 +614,22 @@ config TCP_CONG_WVEGAS
 	wVegas congestion control for MPTCP
 	To enable it, just put 'wvegas' in tcp_congestion_control
 
+config TCP_CONG_CDG
+	tristate "CAIA Delay-Gradient (CDG)"
+	default n
+	---help---
+	CAIA Delay-Gradient (CDG) is a TCP congestion control that modifies
+	the TCP sender in order to:
+
+	  o Use the delay gradient as a congestion signal.
+	  o Back off with an average probability that is independent of the RTT.
+	  o Coexist with flows that use loss-based congestion control.
+	  o Tolerate packet loss unrelated to congestion.
+
+	For further details see:
+	  D.A. Hayes and G. Armitage. "Revisiting TCP congestion control using
+	  delay gradients." In Networking 2011. Preprint: http://goo.gl/No3vdg
+
 choice
 	prompt "Default TCP congestion control"
 	default DEFAULT_CUBIC
@@ -650,6 +666,9 @@ choice
 
 	config DEFAULT_WVEGAS
 		bool "Wvegas" if TCP_CONG_WVEGAS=y
+	
+	config DEFAULT_CDG
+		bool "CDG" if TCP_CONG_CDG=y
 
 	config DEFAULT_RENO
 		bool "Reno"
@@ -675,6 +694,7 @@ config DEFAULT_TCP_CONG
 	default "lia" if DEFAULT_LIA
 	default "wvegas" if DEFAULT_WVEGAS
 	default "reno" if DEFAULT_RENO
+	default "cdg" if DEFAULT_CDG
 	default "cubic"
 
 config TCP_MD5SIG
