--- a/include/uapi/linux/Kbuild
+++ b/include/uapi/linux/Kbuild
@@ -195,6 +195,7 @@ header-y += in_route.h
 header-y += inet_diag.h
 header-y += inotify.h
 header-y += input.h
+header-y += input-event-codes.h
 header-y += ioctl.h
 header-y += ion.h
 header-y += ioprio.h
