lineageos_h901: update defconfig for 15.1

--- a/arch/arm64/configs/lineageos_h901_defconfig
+++ b/arch/arm64/configs/lineageos_h901_defconfig
@@ -94,7 +94,7 @@ CONFIG_RCU_FANOUT_LEAF=16
 # CONFIG_RCU_FANOUT_EXACT is not set
 CONFIG_RCU_FAST_NO_HZ=y
 # CONFIG_TREE_RCU_TRACE is not set
-# CONFIG_RCU_BOOST is not set
+CONFIG_RCU_BOOST=y
 # CONFIG_RCU_NOCB_CPU is not set
 # CONFIG_IKCONFIG is not set
 CONFIG_LOG_BUF_SHIFT=19
@@ -332,7 +332,7 @@ CONFIG_ARCH_SPARSEMEM_DEFAULT=y
 CONFIG_ARCH_SELECT_MEMORY_MODEL=y
 CONFIG_HAVE_ARCH_PFN_VALID=y
 CONFIG_HW_PERF_EVENTS=y
-# CONFIG_PERF_EVENTS_USERMODE is not set
+CONFIG_PERF_EVENTS_USERMODE=y
 # CONFIG_PERF_EVENTS_RESET_PMU_DEBUGFS is not set
 CONFIG_SYS_SUPPORTS_HUGETLBFS=y
 CONFIG_ARCH_WANT_GENERAL_HUGETLB=y
@@ -917,7 +917,6 @@ CONFIG_BT_MSM_SLEEP=y
 # CONFIG_BT_HCIBFUSB is not set
 # CONFIG_BT_HCIVHCI is not set
 # CONFIG_BT_MRVL is not set
-CONFIG_MSM_BT_POWER=y
 # CONFIG_LGE_BLUETOOTH_PM is not set
 CONFIG_MSM_BT_POWER=y
 
@@ -1592,7 +1591,7 @@ CONFIG_INPUT_EVDEV=y
 CONFIG_INPUT_EVBUG=m
 # CONFIG_INPUT_KEYRESET is not set
 # CONFIG_INPUT_KEYCOMBO is not set
-# CONFIG_SENSORS_HALL is not set
+CONFIG_SENSORS_HALL=y
 
 #
 # Input Device Drivers
@@ -2151,6 +2150,7 @@ CONFIG_MSM_SUSPEND_STATS_FIRST_BUCKET=1000000000
 CONFIG_HWMON=y
 # CONFIG_HWMON_VID is not set
 # CONFIG_HWMON_DEBUG_CHIP is not set
+CONFIG_FORCE_FAST_CHARGE=y
 
 #
 # Native drivers
@@ -2532,7 +2532,7 @@ CONFIG_MSM_ISPIF=y
 CONFIG_IMX234=y
 # CONFIG_IMX377 is not set
 # CONFIG_IMX208 is not set
-CONFIG_T4KA3=y
+# CONFIG_T4KA3 is not set
 # CONFIG_OV8858 is not set
 # CONFIG_OV9724 is not set
 # CONFIG_HI256 is not set
@@ -2729,7 +2729,7 @@ CONFIG_FB_DEFERRED_IO=y
 CONFIG_FB_MSM=y
 CONFIG_FB_MSM_BACKLIGHT=y
 # CONFIG_FB_MSM_LCDC_HW is not set
-# CONFIG_FB_MSM_TRIPLE_BUFFER is not set
+CONFIG_FB_MSM_TRIPLE_BUFFER=y
 # CONFIG_FB_MSM_MDP_HW is not set
 CONFIG_FB_MSM_MDSS_COMMON=y
 # CONFIG_FB_MSM_MDP22 is not set
@@ -3292,7 +3292,7 @@ CONFIG_USB_F_ACM=y
 CONFIG_USB_U_SERIAL=y
 CONFIG_USB_F_SERIAL=y
 # CONFIG_USB_ZERO is not set
-# CONFIG_USB_AUDIO is not set
+CONFIG_USB_AUDIO=y
 # CONFIG_USB_ETH is not set
 # CONFIG_USB_G_NCM is not set
 # CONFIG_USB_GADGETFS is not set
@@ -3731,6 +3731,8 @@ CONFIG_MOBICORE_API=y
 # Android
 #
 CONFIG_ANDROID_BINDER_IPC=y
+CONFIG_ANDROID_BINDER_IPC_32BIT=n
+CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
 # CONFIG_CORESIGHT is not set
 # CONFIG_BIF is not set
 # CONFIG_SENSORS is not set
@@ -3899,7 +3901,8 @@ CONFIG_DCACHE_WORD_ACCESS=y
 # CONFIG_EXT3_FS is not set
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_USE_FOR_EXT23=y
-# CONFIG_EXT4_FS_POSIX_ACL is not set
+CONFIG_EXT4_XATTR=y
+CONFIG_EXT4_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
 # CONFIG_EXT4_DEBUG is not set
 CONFIG_JBD2=y
@@ -3918,8 +3921,13 @@ CONFIG_FSNOTIFY=y
 CONFIG_DNOTIFY=y
 CONFIG_INOTIFY_USER=y
 # CONFIG_FANOTIFY is not set
-# CONFIG_QUOTA is not set
-# CONFIG_QUOTACTL is not set
+CONFIG_QUOTA=y
+# CONFIG_QUOTA_NETLINK_INTERFACE is not set
+CONFIG_PRINT_QUOTA_WARNING=y
+# CONFIG_QUOTA_DEBUG is not set
+# CONFIG_QFMT_V1 is not set
+# CONFIG_QFMT_V2 is not set
+CONFIG_QUOTACTL=y
 # CONFIG_AUTOFS4_FS is not set
 CONFIG_FUSE_FS=y
 # CONFIG_CUSE is not set
@@ -3943,6 +3951,12 @@ CONFIG_FAT_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
+CONFIG_EXFAT_FS=y
+CONFIG_EXFAT_DEFAULT_CODEPAGE=437
+CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
+# CONFIG_EXFAT_VIRTUAL_XATTR is not set
+CONFIG_EXFAT_DISCARD=y
+CONFIG_EXFAT_COMPAT_TUXERA=y
 # CONFIG_NTFS_FS is not set
 
 #
@@ -3954,8 +3968,8 @@ CONFIG_PROC_SYSCTL=y
 CONFIG_PROC_PAGE_MONITOR=y
 CONFIG_SYSFS=y
 CONFIG_TMPFS=y
-# CONFIG_TMPFS_POSIX_ACL is not set
-# CONFIG_TMPFS_XATTR is not set
+CONFIG_TMPFS_POSIX_ACL=y
+CONFIG_TMPFS_XATTR=y
 # CONFIG_HUGETLBFS is not set
 # CONFIG_HUGETLB_PAGE is not set
 CONFIG_CONFIGFS_FS=y
@@ -3984,11 +3998,13 @@ CONFIG_SDCARD_FS=y
 # CONFIG_ROMFS_FS is not set
 CONFIG_PSTORE=y
 CONFIG_PSTORE_CONSOLE=y
-CONFIG_PSTORE_PMSG=y
+# CONFIG_PSTORE_PMSG is not set
 CONFIG_PSTORE_RAM=y
 # CONFIG_SYSV_FS is not set
 # CONFIG_UFS_FS is not set
-# CONFIG_F2FS_FS is not set
+CONFIG_F2FS_FS=y
+CONFIG_F2FS_XATTR=y
+CONFIG_F2FS_POSIX_ACL=y
 CONFIG_NETWORK_FILESYSTEMS=y
 # CONFIG_NFS_FS is not set
 # CONFIG_NFSD is not set
@@ -4070,7 +4086,7 @@ CONFIG_DEBUG_FS=y
 CONFIG_DEBUG_KERNEL=y
 # CONFIG_DEBUG_SHIRQ is not set
 # CONFIG_LOCKUP_DETECTOR is not set
-# CONFIG_PANIC_ON_OOPS is not set
+CONFIG_PANIC_ON_OOPS=y
 CONFIG_PANIC_ON_OOPS_VALUE=0
 # CONFIG_PANIC_ON_RECURSIVE_FAULT is not set
 # CONFIG_DETECT_HUNG_TASK is not set
