defconfig: Enable CONFIG_BRCMDBG and pre-set p2pon=1
*In order to always create device p2p0

Change-Id: I288a5fbe1300177f0a7a83818b960ea8d574b0c9

--- a/arch/arm64/configs/aoscp_h815_defconfig
+++ b/arch/arm64/configs/aoscp_h815_defconfig
@@ -1542,6 +1542,7 @@ CONFIG_WIL6210=m
 CONFIG_WIL6210_ISR_COR=y
 CONFIG_WIL6210_TRACING=y
 CONFIG_WIL6210_PLATFORM_MSM=y
+CONFIG_BRCMDBG=y
 # CONFIG_BRCMFMAC is not set
 CONFIG_BCMDHD=y
 CONFIG_BCMDHD_SDIO=y
