drivers: misc: Introduce "Led vibration trigger" to lge msm8992 from htc msm8994
Change-Id: Ie5af5355acbd0679d8c881610d8bf996008a93ac

--- a/arch/arm64/configs/aoscp_h815_defconfig
+++ b/arch/arm64/configs/aoscp_h815_defconfig
@@ -1129,6 +1129,7 @@ CONFIG_QCOM_LIQUID_DOCK=y
 CONFIG_LGE_IRRC=y
 CONFIG_LGE_EVENT_LOCK=y
 CONFIG_LGE_APPSPORT=y
+CONFIG_VIB_TRIGGERS=y
 # CONFIG_C2PORT is not set
 
 #
