--- a/arch/arm64/configs/aoscp_h811_defconfig
+++ b/arch/arm64/configs/aoscp_h811_defconfig
@@ -447,6 +447,7 @@ CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_GOV_COMMON=y
 CONFIG_SCHED_FREQ_INPUT=y
 CONFIG_CPU_FREQ_STAT=y
+CONFIG_TASK_CPUFREQ_STATS=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
