--- a/arch/arm64/configs/lineageos_h901_defconfig
+++ b/arch/arm64/configs/lineageos_h901_defconfig
@@ -452,7 +452,8 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
-CONFIG_CPU_BOOST=y
+# CONFIG_CPU_BOOST is not set
+CONFIG_CPU_INPUT_BOOST=y
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
 CONFIG_LGE_LBFC=y
 
