--- a/arch/arm64/configs/aoscp_h815_defconfig
+++ b/arch/arm64/configs/aoscp_h815_defconfig
@@ -470,6 +470,7 @@ CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
 CONFIG_DYNAMIC_STUNE_BOOST=y
 # CONFIG_CPU_BOOST is not set
 CONFIG_CPU_INPUT_BOOST=y
+CONFIG_FINGERPRINT_BOOST=y
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
 CONFIG_LGE_LBFC=y
 CONFIG_BOEFFLA_WL_BLOCKER=y
