--- a/arch/arm64/configs/lineageos_h901_defconfig
+++ b/arch/arm64/configs/lineageos_h901_defconfig
@@ -3971,6 +3971,8 @@ CONFIG_EXFAT_DISCARD=y
 CONFIG_EXFAT_COMPAT_TUXERA=y
 # CONFIG_NTFS_FS is not set
 
+#FRANDOM Generator
+CONFIG_FRANDOM=y
 #
 # Pseudo filesystems
 #
