h901 defconfig: enable lazyplug

--- a/arch/arm64/configs/lineageos_h901_defconfig
+++ b/arch/arm64/configs/lineageos_h901_defconfig
@@ -461,6 +461,7 @@ CONFIG_CPU_INPUT_BOOST=y
 CONFIG_FINGERPRINT_BOOST=y
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
 CONFIG_LGE_LBFC=y
+CONFIG_LAZYPLUG=y
 
 #
 # ARM CPU frequency scaling drivers
