--- a/arch/arm64/configs/lineageos_h901_defconfig
+++ b/arch/arm64/configs/lineageos_h901_defconfig
@@ -531,7 +531,8 @@ CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_CUBIC=y
 CONFIG_TCP_CONG_WESTWOOD=m
 CONFIG_TCP_CONG_HTCP=m
-# CONFIG_TCP_CONG_HSTCP is not set
+CONFIG_TCP_CONG_CDG=y
+CONFIG_TCP_CONG_HSTCP=y
 # CONFIG_TCP_CONG_HYBLA is not set
 # CONFIG_TCP_CONG_VEGAS is not set
 # CONFIG_TCP_CONG_SCALABLE is not set
@@ -539,10 +540,11 @@ CONFIG_TCP_CONG_HTCP=m
 # CONFIG_TCP_CONG_VENO is not set
 # CONFIG_TCP_CONG_YEAH is not set
 # CONFIG_TCP_CONG_ILLINOIS is not set
-CONFIG_DEFAULT_BIC=y
+# CONFIG_DEFAULT_BIC is not set
+CONFIG_DEFAULT_CDG=y
 # CONFIG_DEFAULT_CUBIC is not set
 # CONFIG_DEFAULT_RENO is not set
-CONFIG_DEFAULT_TCP_CONG="bic"
+CONFIG_DEFAULT_TCP_CONG="cdg"
 # CONFIG_TCP_MD5SIG is not set
 # CONFIG_LGP_DATA_TCPIP_TCP_SYN_RETRY_CONFIG_UPLUS is not set
 CONFIG_IPV6=y
