--- a/arch/arm64/configs/aoscp_h815_defconfig
+++ b/arch/arm64/configs/aoscp_h815_defconfig
@@ -3959,6 +3959,7 @@ CONFIG_FUSE_FS=y
 # CONFIG_CUSE is not set
 CONFIG_DYNAMIC_FSYNC=y
 CONFIG_STATE_NOTIFIER=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_QUICK_WAKEUP=y
 #
 # Caches
