h901 defconfig: enable power efficient wq

--- a/arch/arm64/configs/lineageos_h901_defconfig
+++ b/arch/arm64/configs/lineageos_h901_defconfig
@@ -3945,6 +3945,7 @@ CONFIG_FUSE_FS=y
 # CONFIG_CUSE is not set
 CONFIG_DYNAMIC_FSYNC=y
 CONFIG_STATE_NOTIFIER=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_QUICK_WAKEUP=y
 #
 # Caches
