--- a/arch/arm64/configs/aoscp_h811_defconfig
+++ b/arch/arm64/configs/aoscp_h811_defconfig
@@ -468,6 +468,7 @@ CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
 CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
 CONFIG_CPU_BOOST=y
+CONFIG_DYNAMIC_STUNE_BOOST=y
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
 CONFIG_LGE_LBFC=y
 CONFIG_BOEFFLA_WL_BLOCKER=y
