--- a/arch/arm64/configs/aoscp_h901_defconfig
+++ b/arch/arm64/configs/aoscp_h901_defconfig
@@ -269,8 +269,8 @@ CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
 CONFIG_IOSCHED_ZEN=y
-CONFIG_IOSCHED_FIOPS=y
 # CONFIG_DEFAULT_NOOP is not set
+CONFIG_IOSCHED_FIOPS=y
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_ROW is not set
 # CONFIG_DEFAULT_CFQ is not set
@@ -327,8 +327,8 @@ CONFIG_SMP=y
 CONFIG_SCHED_MC=y
 # CONFIG_SCHED_SMT is not set
 # CONFIG_ARCH_WANTS_CTXSW_LOGGING is not set
-CONFIG_NR_CPUS=6
-# CONFIG_HOTPLUG_CPU is not set
+CONFIG_NR_CPUS=8
+CONFIG_HOTPLUG_CPU=y
 # CONFIG_PREEMPT_NONE is not set
 # CONFIG_PREEMPT_VOLUNTARY is not set
 CONFIG_PREEMPT=y
@@ -397,7 +397,7 @@ CONFIG_SECCOMP=y
 #
 CONFIG_CMDLINE=""
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
-CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES="msm8992-p1_global_com-rev-a msm8992-p1_global_com-rev-b msm8992-p1_global_com-rev-c msm8992-p1_global_com-rev-10"
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES="msm8992-pplus_tmo_us-rev-b msm8992-pplus_tmo_us-rev-evb3 msm8992-pplus_tmo_us-rev-10 msm8992-pplus_tmo_us-rev-a msm8992-pplus_tmo_us-rev-0"
 # CONFIG_EFI is not set
 
 #
@@ -447,7 +447,8 @@ CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_GOV_COMMON=y
 CONFIG_SCHED_FREQ_INPUT=y
 CONFIG_CPU_FREQ_STAT=y
-# CONFIG_CPU_FREQ_STAT_DETAILS is not set
+CONFIG_TASK_CPUFREQ_STATS=y
+CONFIG_CPU_FREQ_STAT_DETAILS=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
@@ -467,6 +468,7 @@ CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
 CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
 CONFIG_CPU_BOOST=y
+CONFIG_DYNAMIC_STUNE_BOOST=y
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
 CONFIG_LGE_LBFC=y
 CONFIG_BOEFFLA_WL_BLOCKER=y
@@ -534,7 +536,7 @@ CONFIG_INET_XFRM_MODE_BEET=y
 CONFIG_INET_DIAG=y
 CONFIG_INET_TCP_DIAG=y
 # CONFIG_INET_UDP_DIAG is not set
-CONFIG_INET_DIAG_DESTROY=y
+# CONFIG_INET_DIAG_DESTROY is not set
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_CUBIC=y
@@ -726,7 +728,10 @@ CONFIG_NETFILTER_XT_MATCH_STRING=y
 CONFIG_NETFILTER_XT_MATCH_TCPMSS=y
 CONFIG_NETFILTER_XT_MATCH_TIME=y
 CONFIG_NETFILTER_XT_MATCH_U32=y
-# CONFIG_LG_VPN_V34 is not set
+CONFIG_LG_VPN_V34=y
+CONFIG_VPNCLIENT_SECURITY=y
+CONFIG_VPNCLIENT_PROC_UID=1000
+CONFIG_VPNCLIENT_PROC_GID=1000
 # CONFIG_IP_SET is not set
 # CONFIG_IP_VS is not set
 
@@ -918,10 +923,7 @@ CONFIG_SOCKEV_NLMCAST=y
 # CONFIG_IRDA is not set
 CONFIG_BT=y
 CONFIG_BT_RFCOMM=y
-CONFIG_BT_RFCOMM_TTY=y
 CONFIG_BT_BNEP=y
-CONFIG_BT_BNEP_MC_FILTER=y
-CONFIG_BT_BNEP_PROTO_FILTER=y
 CONFIG_BT_HIDP=y
 
 #
@@ -932,19 +934,19 @@ CONFIG_BT_HIDP=y
 # CONFIG_BT_HCIUART is not set
 # CONFIG_BT_HCIBCM203X is not set
 # CONFIG_BT_HCIBPA10X is not set
+CONFIG_BT_MSM_SLEEP=y
 # CONFIG_BT_HCIBFUSB is not set
 # CONFIG_BT_HCIVHCI is not set
 # CONFIG_BT_MRVL is not set
-CONFIG_BT_MSM_SLEEP=y
-CONFIG_MSM_BT_POWER=y
 # CONFIG_LGE_BLUETOOTH_PM is not set
+CONFIG_MSM_BT_POWER=y
 
 #
 # BROADCOM V4L2 BT/FM device drivers
 #
 # CONFIG_BT_PROTOCOL_DRIVER is not set
 # CONFIG_LINE_DISCIPLINE_DRIVER is not set
-# CONFIG_V4L2_FM_DRIVER is not set
+# CONFIG_V4L2_FM_DRIVER is not set 
 # CONFIG_AF_RXRPC is not set
 CONFIG_FIB_RULES=y
 CONFIG_WIRELESS=y
@@ -976,13 +978,13 @@ CONFIG_RFKILL_LEDS=y
 # CONFIG_CAIF is not set
 # CONFIG_CEPH_LIB is not set
 # CONFIG_NFC is not set
-CONFIG_LGE_NFC=y
-CONFIG_LGE_NFC_PN547_C2=y
-# CONFIG_NFC_BCM2079X is not set
+# CONFIG_LGE_NFC is not set
+# CONFIG_LGE_NFC_PN547_C2 is not set
+CONFIG_NFC_BCM2079X=y
 # CONFIG_BCM2079X_MTK_PLATFORM is not set
 # CONFIG_LGE_NFC_PRESTANDBY is not set
 # CONFIG_LGE_NFC_MULTICORE_FASTBOOT is not set
-CONFIG_LGE_NFC_SET_IRQ_WAKEUP=y
+# CONFIG_LGE_NFC_SET_IRQ_WAKEUP is not set
 # CONFIG_LGE_NFC_DEBUG_MESSAGE is not set
 # CONFIG_LGE_NFC_USE_PMIC is not set
 # CONFIG_PN5XX_MTK_PLATFORM is not set
@@ -1155,7 +1157,7 @@ CONFIG_VIB_TRIGGERS=y
 #
 # CONFIG_ALTERA_STAPL is not set
 CONFIG_MSM_QDSP6V2_CODECS=y
-# CONFIG_MSM_ULTRASOUND is not set
+CONFIG_MSM_ULTRASOUND=y
 # CONFIG_ITSON_API is not set
 
 #
@@ -1545,7 +1547,6 @@ CONFIG_WIL6210=m
 CONFIG_WIL6210_ISR_COR=y
 CONFIG_WIL6210_TRACING=y
 CONFIG_WIL6210_PLATFORM_MSM=y
-CONFIG_BRCMDBG=y
 # CONFIG_BRCMFMAC is not set
 CONFIG_BCMDHD=y
 CONFIG_BCMDHD_SDIO=y
@@ -1554,9 +1555,9 @@ CONFIG_BCMDHD_SDIO=y
 # CONFIG_BCM4334 is not set
 # CONFIG_BCM43341 is not set
 # CONFIG_BCM4335 is not set
-CONFIG_BCM4339=y
+# CONFIG_BCM4339 is not set
 # CONFIG_BCM4343 is not set
-# CONFIG_BCM43455 is not set
+CONFIG_BCM43455=y
 # CONFIG_BCM4354 is not set
 CONFIG_BCMDHD_COB=y
 CONFIG_BCMDHD_FW_PATH="/system/etc/firmware/fw_bcmdhd.bin"
@@ -1644,7 +1645,6 @@ CONFIG_KEYBOARD_GPIO=y
 # CONFIG_KEYBOARD_XTKBD is not set
 # CONFIG_NOT_USE_HALL_IC is not set
 # CONFIG_INPUT_MOUSE is not set
-CONFIG_DOUBLE_TAP=y
 CONFIG_MOUSE_APPLETOUCH=y
 CONFIG_MOUSE_BCM5974=y
 CONFIG_MOUSE_SYNAPTICS_USB=y
@@ -1683,10 +1683,11 @@ CONFIG_TABLET_USB_HANWANG=y
 CONFIG_TABLET_USB_KBTAB=y
 CONFIG_TABLET_USB_WACOM=y
 CONFIG_INPUT_TOUCHSCREEN=y
-# CONFIG_LGE_TOUCH_CORE is not set
+CONFIG_LGE_TOUCH_CORE=y
 # CONFIG_LGE_TOUCH_CORE_MTK is not set
-# CONFIG_LGE_TOUCH_CORE_BASE is not set
-CONFIG_LGE_TOUCH_FW_PATH=""
+CONFIG_LGE_TOUCH_CORE_BASE=y
+CONFIG_LGE_TOUCH_FW_PATH="sic/pplus"
+CONFIG_LGE_TOUCH_LG4945=y
 # CONFIG_TOUCHSCREEN_ADS7846 is not set
 # CONFIG_TOUCHSCREEN_AD7877 is not set
 # CONFIG_TOUCHSCREEN_AD7879 is not set
@@ -1729,14 +1730,13 @@ CONFIG_LGE_TOUCH_FW_PATH=""
 # CONFIG_TOUCHSCREEN_FT5X06 is not set
 # CONFIG_TOUCHSCREEN_MSTAR21XX is not set
 CONFIG_TOUCHSCREEN_GEN_VKEYS=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI4_DEV=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_FW_PATH="p1"
-CONFIG_TOUCHSCREEN_LGE_SIC=y
-CONFIG_TOUCHSCREEN_SIC_FW_PATH="p1"
+# CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4 is not set
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI4_DEV is not set
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE is not set
+CONFIG_TOUCHSCREEN_SYNAPTICS_FW_PATH=""
+# CONFIG_TOUCHSCREEN_LGE_SIC is not set
+CONFIG_TOUCHSCREEN_SIC_FW_PATH=""
 # CONFIG_TOUCHSCREEN_LGE_SIC_SPI is not set
-CONFIG_SECURE_TOUCH=y
 # CONFIG_TOUCHSCREEN_GT9XX is not set
 # CONFIG_TOUCHSCREEN_BU21150 is not set
 # CONFIG_INPUT_MT_WRAPPER is not set
@@ -1778,7 +1778,8 @@ CONFIG_INPUT_GPIO=m
 # CONFIG_SENSORS_BMA2X2 is not set
 # CONFIG_SENSORS_MC3430 is not set
 # CONFIG_SENSORS_ISL29044A is not set
-# CONFIG_INPUT_FINGERPRINT is not set
+CONFIG_INPUT_FINGERPRINT=y
+CONFIG_INPUT_FINGERPRINT_FPC_BTP=y
 
 #
 # Hardware I/O ports
@@ -2114,7 +2115,7 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_SMB137C_CHARGER is not set
 # CONFIG_SMB349_USB_CHARGER is not set
 # CONFIG_SMB349_DUAL_CHARGER is not set
-# CONFIG_SMB1351_USB_CHARGER is not set
+CONFIG_SMB1351_USB_CHARGER=y
 # CONFIG_SMB350_CHARGER is not set
 CONFIG_SMB135X_CHARGER=y
 # CONFIG_SMB1360_CHARGER_FG is not set
@@ -2140,19 +2141,20 @@ CONFIG_LGE_PM_USB_ID=y
 CONFIG_LGE_PM_UNIFIED_WLC=y
 # CONFIG_LGE_PM_UNIFIED_WLC_ALIGNMENT is not set
 # CONFIG_LGE_PM_UNIFIED_WLC_ALIGNMENT_IDT9025A is not set
-# CONFIG_LGE_PM_IDTP9017_WIRELESS_CHARGER is not set
+CONFIG_LGE_PM_IDTP9017_WIRELESS_CHARGER=y
 # CONFIG_LGE_PM_CHARGING_USING_CHGSTS_WLC is not set
 CONFIG_LGE_PM_BATTERY_ID_CHECKER=y
-# CONFIG_LGE_PM_MAXIM_EVP_CONTROL is not set
+CONFIG_LGE_PM_MAXIM_EVP_CONTROL=y
 CONFIG_LGE_PM_QC20_SCENARIO=y
 CONFIG_LGE_PM_LLK_MODE=y
 CONFIG_LGE_PM_SMPL_COUNTER=y
 # CONFIG_LGE_PM_VZW_REQ is not set
-CONFIG_BATTERY_MAX17048=y
-# CONFIG_BATTERY_MAX17050 is not set
+# CONFIG_BATTERY_MAX17048 is not set
+CONFIG_BATTERY_MAX17050=y
 CONFIG_LGE_PM_CHARGE_INFO=y
 CONFIG_LGE_PM_CHARGING_TEMP_SCENARIO=y
-# CONFIG_LGE_PM_PARALLEL_CHARGING is not set
+CONFIG_LGE_PM_PARALLEL_CHARGING=y
+CONFIG_CHARGER_VOLTAGE=y
 # CONFIG_LGE_PM_BOARD_THERM is not set
 # CONFIG_LGE_PM_THERM_VS is not set
 # CONFIG_LGE_PM_CHECK_FB_STATUS is not set
@@ -2554,13 +2556,13 @@ CONFIG_MSM_ISPIF=y
 CONFIG_IMX234=y
 # CONFIG_IMX377 is not set
 # CONFIG_IMX208 is not set
-CONFIG_T4KA3=y
+# CONFIG_T4KA3 is not set
 # CONFIG_OV8858 is not set
 # CONFIG_OV9724 is not set
 # CONFIG_HI256 is not set
 # CONFIG_OV5648 is not set
-# CONFIG_OV5670 is not set
-# CONFIG_OV5670W is not set
+CONFIG_OV5670=y
+CONFIG_OV5670W=y
 # CONFIG_MT9M114 is not set
 # CONFIG_OV5645 is not set
 # CONFIG_OV7695 is not set
@@ -2577,8 +2579,8 @@ CONFIG_MSM_FD=y
 # CONFIG_LGE_DUAL_LED is not set
 # CONFIG_LGE_CAMERA_RTB_DEBUG is not set
 # CONFIG_LGE_CAMERA_SJ is not set
-# CONFIG_SPI_CONTEXTHUB is not set
-# CONFIG_SPI_MH1 is not set
+CONFIG_SPI_CONTEXTHUB=y
+CONFIG_SPI_MH1=y
 CONFIG_MSM_VIDC_V4L2=y
 # CONFIG_MSM_VIDC_VMEM is not set
 # CONFIG_MSM_WFD is not set
@@ -2588,7 +2590,7 @@ CONFIG_MSM_VIDC_V4L2=y
 
 #
 # Supported MMC/SDIO adapters
-#
+
 CONFIG_RADIO_ADAPTERS=y
 # CONFIG_RADIO_SI470X is not set
 # CONFIG_USB_MR800 is not set
@@ -2804,7 +2806,7 @@ CONFIG_FB_MSM_MDSS_HDMI_PANEL=y
 # CONFIG_FB_MSM_MDSS_EDP_PANEL is not set
 # CONFIG_FB_MSM_MDSS_MDP3 is not set
 CONFIG_LGE_MIPI_P1_INCELL_QHD_CMD_PANEL=y
-# CONFIG_LGE_MIPI_PP_INCELL_QHD_CMD_PANEL is not set
+CONFIG_LGE_MIPI_PP_INCELL_QHD_CMD_PANEL=y
 CONFIG_LGE_P1_DSV=y
 # CONFIG_FB_MSM_MDSS_XLOG_DEBUG is not set
 # CONFIG_LGE_DISPLAY_TUNING is not set
@@ -2814,17 +2816,21 @@ CONFIG_LGE_PARTIAL_UPDATE=y
 CONFIG_LGE_P1_SRE_SUPPORTED=y
 CONFIG_LGE_PP_AD_SUPPORTED=y
 CONFIG_LGE_CAM_PREVIEW_TUNE=y
-# CONFIG_LGE_TE_SEL is not set
+CONFIG_LGE_TE_SEL=y
 CONFIG_LGE_DISPLAY_POWER_SEQUENCE=y
 # CONFIG_LGE_DISPLAY_DFPS is not set
-# CONFIG_LGE_DISPLAY_VSYNC_SKIP is not set
-# CONFIG_MACH_MSM8992_PPLUS is not set
-# CONFIG_LGE_DISPLAY_EXTENDED_PANEL is not set
+CONFIG_LGE_DISPLAY_VSYNC_SKIP=y
+CONFIG_MACH_MSM8992_PPLUS=y
+CONFIG_LGE_DISPLAY_EXTENDED_PANEL=y
 CONFIG_LGE_VSYNC_SKIP=y
-CONFIG_LGE_BLMAP_STORE_MODE=y
+# CONFIG_LGE_BLMAP_STORE_MODE is not set
 # CONFIG_LGE_READER_MODE is not set
 # CONFIG_EXYNOS_VIDEO is not set
-# CONFIG_BACKLIGHT_LCD_SUPPORT is not set
+CONFIG_BACKLIGHT_LCD_SUPPORT=y
+CONFIG_LCD_CLASS_DEVICE=m
+CONFIG_BACKLIGHT_CLASS_DEVICE=y
+CONFIG_BACKLIGHT_GENERIC=y
+CONFIG_BACKLIGHT_LM3697=y
 # CONFIG_ADF is not set
 CONFIG_SLIMPORT_DYNAMIC_HPD=y
 # CONFIG_SLIMPORT_ANX7808 is not set
@@ -2954,7 +2960,7 @@ CONFIG_SND_SOC_QDSP6V2=y
 CONFIG_QTI_PP=y
 CONFIG_SND_SOC_CPE=y
 CONFIG_SND_SOC_MSM8994=y
-# CONFIG_SND_USE_TERT_MI2S is not set
+CONFIG_SND_USE_TERT_MI2S=y
 CONFIG_SND_USE_QUAT_MI2S=y
 CONFIG_SND_LGE_EFFECT=y
 CONFIG_SND_LGE_DSDP_DUAL_AUDIO=y
@@ -2963,16 +2969,16 @@ CONFIG_SND_LGE_MABL=y
 # CONFIG_SND_LGE_USE_PHONE_MEMO is not set
 CONFIG_SND_TI_SPK_PROT_OPALUM=y
 # CONFIG_SND_LGE_HIDDEN_AUX is not set
-# CONFIG_SND_SOC_HPH_WA is not set
+CONFIG_SND_SOC_HPH_WA=y
 # CONFIG_SND_EAR_MIC_SWITCH is not set
-# CONFIG_SND_LGE_VOC_CONF is not set
+CONFIG_SND_LGE_VOC_CONF=y
 CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
 CONFIG_SND_SOC_WCD9330=y
 CONFIG_SND_SOC_WCD9XXX=y
 CONFIG_SND_SOC_WCD_CPE=y
 CONFIG_SND_SOC_MSM_STUB=y
-# CONFIG_SND_SOC_ES9018 is not set
+CONFIG_SND_SOC_ES9018=y
 CONFIG_SND_SOC_TAS2552=y
 CONFIG_SND_SOC_MSM_HDMI_CODEC_RX=y
 # CONFIG_SND_SOC_SPKINFO is not set
@@ -3344,7 +3350,7 @@ CONFIG_LGE_USB_G_MULTIPLE_CONFIGURATION=y
 CONFIG_LGE_USB_DIAG_LOCK=y
 # CONFIG_LGE_USB_DIAG_LOCK_SPR is not set
 CONFIG_LGE_USB_AUDIO_DOCK=y
-# CONFIG_LGE_USB_MAXIM_EVP is not set
+CONFIG_LGE_USB_MAXIM_EVP=y
 CONFIG_LGE_USB_HOST_SUPPORT_LIST_HID=y
 CONFIG_LGE_USB_HOST_SUPPORT_LIST_NETWORK=y
 CONFIG_LGE_USB_HOST_SUPPORT_LIST_INPUT=y
@@ -3359,7 +3365,7 @@ CONFIG_MMC=y
 CONFIG_LGE_MMC_BKOPS_ENABLE=y
 CONFIG_LGE_MMC_RESET_IF_HANG=y
 # CONFIG_LGE_MMC_DYNAMIC_LOG is not set
-# CONFIG_LGE_MMC_CQ_ENABLE is not set
+CONFIG_LGE_MMC_CQ_ENABLE=y
 CONFIG_MMC_UNSAFE_RESUME=y
 CONFIG_MMC_CLKGATE=y
 # CONFIG_MMC_EMBEDDED_SDIO is not set
@@ -3375,7 +3381,7 @@ CONFIG_MMC_BLOCK_BOUNCE=y
 # CONFIG_SDIO_UART is not set
 CONFIG_MMC_TEST=m
 CONFIG_MMC_BLOCK_TEST=m
-# CONFIG_MMC_FFU is not set
+CONFIG_MMC_FFU=y
 # CONFIG_MMC_LGE_UTILS is not set
 
 #
@@ -3750,7 +3756,6 @@ CONFIG_MOBICORE_API=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_BINDER_IPC_32BIT=n
 CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
-# CONFIG_ANDROID_LOGGER is not set
 # CONFIG_CORESIGHT is not set
 # CONFIG_BIF is not set
 # CONFIG_SENSORS is not set
@@ -3828,9 +3833,9 @@ CONFIG_LGE_DISPLAY_DUAL_BACKLIGHT=y
 #
 # LGE Board Selection
 #
-CONFIG_MACH_MSM8992_P1=y
+# CONFIG_MACH_MSM8992_P1 is not set
 # CONFIG_MACH_MSM8992_P1_ATT_US is not set
-CONFIG_MACH_MSM8992_P1_GLOBAL_COM=y
+# CONFIG_MACH_MSM8992_P1_GLOBAL_COM is not set
 # CONFIG_MACH_MSM8992_P1_CN is not set
 # CONFIG_MACH_MSM8992_P1_CMO_CN is not set
 # CONFIG_MACH_MSM8992_P1_CTO_CN is not set
@@ -3854,7 +3859,7 @@ CONFIG_MACH_MSM8992_P1_GLOBAL_COM=y
 # CONFIG_MACH_MSM8992_PPLUS_USC_US is not set
 # CONFIG_MACH_MSM8992_PPLUS_KDDI_JP is not set
 # CONFIG_MACH_MSM8992_PPLUS_SPR_US is not set
-# CONFIG_MACH_MSM8992_PPLUS_TMO_US is not set
+CONFIG_MACH_MSM8992_PPLUS_TMO_US=y
 # CONFIG_MACH_MSM8992_PPLUS_GLOBAL_COM is not set
 # CONFIG_MACH_MSM8992_P1A4WP is not set
 # CONFIG_MACH_MSM8992_P1A4WP_KR is not set
@@ -3880,7 +3885,7 @@ CONFIG_CHECK_MATCHED=y
 # LGE QFPROM Values
 #
 CONFIG_LGE_QFPROM_INTERFACE=y
-CONFIG_LGE_QFPROM_SECHASH="01048fd7d1dfd846cd13b53584b692e66ac553616d452ab7e096e65aafdd25c7"
+CONFIG_LGE_QFPROM_SECHASH="6da53e689689966a66bdc075c7f5c64fc1a376b646a313339977dce7cdf08f41"
 CONFIG_LGE_PM_UNIFIED_NODE=y
 
 #
@@ -4014,10 +4019,6 @@ CONFIG_ECRYPT_FS=y
 CONFIG_CRYPTO_DEV_HWCRYPTO_FOR_SDCARD=y
 CONFIG_SD_ENCRYPTION_MANAGER=y
 CONFIG_SDCARD_FS=y
-CONFIG_SDCARD_FS_ANDROID_M=y
-CONFIG_SDCARD_FS_CI_SEARCH=y
-CONFIG_SDCARD_FS_32BIT_INO=y
-CONFIG_SDCARD_FS_SUPPORT_SYMLINK=y
 # CONFIG_HFS_FS is not set
 # CONFIG_HFSPLUS_FS is not set
 # CONFIG_BEFS_FS is not set
@@ -4381,7 +4382,8 @@ CONFIG_CRYPTO_ANSI_CPRNG=y
 # CONFIG_CRYPTO_USER_API_SKCIPHER is not set
 CONFIG_CRYPTO_HW=y
 CONFIG_CRYPTO_DEV_QCE50=y
-# CONFIG_FIPS_ENABLE is not set
+CONFIG_FIPS_ENABLE=y
+CONFIG_FIPS_RECOMPILE=y
 CONFIG_CRYPTO_DEV_QCRYPTO=y
 CONFIG_CRYPTO_DEV_QCE=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
