--- a/arch/arm64/configs/usu_h812_defconfig
+++ b/arch/arm64/configs/usu_h812_defconfig
@@ -41,8 +41,11 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_CMDLINE=""
 CONFIG_CMDLINE_SEARCHREPLACE=y
 CONFIG_CMDLINE_SAR_ENABLE0=y
-CONFIG_CMDLINE_SAR_SEARCH0=" model.name=LGLS991 "
-CONFIG_CMDLINE_SAR_REPLACE0=" model.name=LGLS991 lge.sim_num=1 "
+CONFIG_CMDLINE_SAR_SEARCH0=" androidboot.serialno=LGLS991"
+CONFIG_CMDLINE_SAR_REPLACE0=" androidboot.serialno=LGH812"
+CONFIG_CMDLINE_SAR_ENABLE1=y
+CONFIG_CMDLINE_SAR_SEARCH1=" model.name=LGLS991 "
+CONFIG_CMDLINE_SAR_REPLACE1=" model.name=LG-H812 lge.sim_num=1 "
 CONFIG_CMDLINE_SAR_ENABLE2=y
 CONFIG_CMDLINE_SAR_SEARCH2=" slub_debug=FZP"
 CONFIG_CMDLINE_SAR_REPLACE2=" "
