--- a/arch/arm64/configs/usu_vs986_defconfig
+++ b/arch/arm64/configs/usu_vs986_defconfig
@@ -483,6 +483,7 @@ CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
 CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
 CONFIG_CPU_BOOST=y
+CONFIG_DYNAMIC_STUNE_BOOST=y
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
 CONFIG_LGE_LBFC=y
 CONFIG_BOEFFLA_WL_BLOCKER=y
@@ -2156,7 +2157,7 @@ CONFIG_LGE_PM_UNIFIED_WLC=y
 # CONFIG_LGE_PM_IDTP9017_WIRELESS_CHARGER is not set
 # CONFIG_LGE_PM_CHARGING_USING_CHGSTS_WLC is not set
 CONFIG_LGE_PM_BATTERY_ID_CHECKER=y
-# CONFIG_LGE_PM_MAXIM_EVP_CONTROL is not set
+CONFIG_LGE_PM_MAXIM_EVP_CONTROL is not set
 CONFIG_LGE_PM_QC20_SCENARIO=y
 CONFIG_LGE_PM_LLK_MODE=y
 CONFIG_LGE_PM_SMPL_COUNTER=y
@@ -3356,7 +3357,7 @@ CONFIG_LGE_USB_G_MULTIPLE_CONFIGURATION=y
 CONFIG_LGE_USB_DIAG_LOCK=y
 # CONFIG_LGE_USB_DIAG_LOCK_SPR is not set
 CONFIG_LGE_USB_AUDIO_DOCK=y
-# CONFIG_LGE_USB_MAXIM_EVP is not set
+CONFIG_LGE_USB_MAXIM_EVP=y
 CONFIG_LGE_USB_HOST_SUPPORT_LIST_HID=y
 CONFIG_LGE_USB_HOST_SUPPORT_LIST_NETWORK=y
 CONFIG_LGE_USB_HOST_SUPPORT_LIST_INPUT=y
@@ -3973,17 +3974,30 @@ CONFIG_FUSE_FS=y
 #
 CONFIG_FAT_FS=y
 # CONFIG_MSDOS_FS is not set
-CONFIG_VFAT_FS=y
+# CONFIG_VFAT_FS is not set
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
-CONFIG_EXFAT_FS=y
+# CONFIG_EXFAT_FS is not set
 CONFIG_EXFAT_DEFAULT_CODEPAGE=437
 CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
 # CONFIG_EXFAT_VIRTUAL_XATTR is not set
 CONFIG_EXFAT_DISCARD=y
 CONFIG_EXFAT_COMPAT_TUXERA=y
 # CONFIG_EXFAT_DEBUG is not set
-# CONFIG_NTFS_FS is not set
+CONFIG_NTFS_FS=y
+CONFIG_SDFAT_FS=y
+CONFIG_SDFAT_USE_FOR_EXFAT=y
+CONFIG_SDFAT_USE_FOR_VFAT=y
+CONFIG_SDFAT_DELAYED_META_DIRTY=y
+CONFIG_SDFAT_SUPPORT_DIR_SYNC=y
+CONFIG_SDFAT_DEFAULT_CODEPAGE=437
+CONFIG_SDFAT_DEFAULT_IOCHARSET="utf8"
+CONFIG_SDFAT_ALIGNED_MPAGE_WRITE=y
+CONFIG_SDFAT_VIRTUAL_XATTR=y
+CONFIG_SDFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:vfat:s0"
+# CONFIG_SDFAT_DEBUG is not set
+# CONFIG_SDFAT_DBG_MSG is not set
+CONFIG_SDFAT_STATISTICS=y
 
 #
 # Pseudo filesystems
