--- a/arch/arm64/configs/aoscp_h901_defconfig
+++ b/arch/arm64/configs/aoscp_h901_defconfig
@@ -469,6 +469,7 @@ CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
 CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
 CONFIG_CPU_BOOST=y
 CONFIG_DYNAMIC_STUNE_BOOST=y
+CONFIG_HIMA_HOTPLUG=y
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
 CONFIG_LGE_LBFC=y
 CONFIG_BOEFFLA_WL_BLOCKER=y
