h901: enable cpu wake boost

--- a/arch/arm64/configs/aoscp_h901_defconfig
+++ b/arch/arm64/configs/aoscp_h901_defconfig
@@ -471,6 +471,7 @@ CONFIG_CPU_BOOST=y
 CONFIG_DYNAMIC_STUNE_BOOST=y
 CONFIG_HIMA_HOTPLUG=y
 CONFIG_VOLTAGE_CONTROL=y
+CONFIG_CPU_WAKE_BOOST=y
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
 CONFIG_LGE_LBFC=y
 CONFIG_BOEFFLA_WL_BLOCKER=y
