configs: correct symlink mixup

--- a/arch/arm64/configs/aoscp_h815_defconfig
+++ b/arch/arm64/configs/aoscp_h815_defconfig
@@ -467,10 +467,8 @@ CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
 CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
+CONFIG_CPU_BOOST=y
 CONFIG_DYNAMIC_STUNE_BOOST=y
-# CONFIG_CPU_BOOST is not set
-CONFIG_CPU_INPUT_BOOST=y
-CONFIG_FINGERPRINT_BOOST=y
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
 CONFIG_LGE_LBFC=y
 CONFIG_BOEFFLA_WL_BLOCKER=y
@@ -544,8 +542,7 @@ CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_CUBIC=y
 CONFIG_TCP_CONG_WESTWOOD=y
 CONFIG_TCP_CONG_HTCP=m
-CONFIG_TCP_CONG_CDG=y
-CONFIG_TCP_CONG_HSTCP=y
+# CONFIG_TCP_CONG_HSTCP is not set
 # CONFIG_TCP_CONG_HYBLA is not set
 # CONFIG_TCP_CONG_VEGAS is not set
 # CONFIG_TCP_CONG_SCALABLE is not set
@@ -554,11 +551,10 @@ CONFIG_TCP_CONG_HSTCP=y
 # CONFIG_TCP_CONG_YEAH is not set
 # CONFIG_TCP_CONG_ILLINOIS is not set
 # CONFIG_DEFAULT_BIC is not set
-CONFIG_DEFAULT_CDG=y
 # CONFIG_DEFAULT_CUBIC is not set
-# CONFIG_DEFAULT_WESTWOOD is not set
+CONFIG_DEFAULT_WESTWOOD=y
 # CONFIG_DEFAULT_RENO is not set
-CONFIG_DEFAULT_TCP_CONG="cdg"
+CONFIG_DEFAULT_TCP_CONG="westwood"
 # CONFIG_TCP_MD5SIG is not set
 # CONFIG_LGP_DATA_TCPIP_TCP_SYN_RETRY_CONFIG_UPLUS is not set
 CONFIG_IPV6=y
@@ -3725,7 +3721,6 @@ CONFIG_DEVFREQ_GOV_MSM_ADRENO_TZ=y
 CONFIG_MSM_BIMC_BWMON=y
 CONFIG_DEVFREQ_GOV_MSM_GPUBW_MON=y
 CONFIG_DEVFREQ_GOV_MSM_BW_HWMON=y
-CONFIG_ADRENO_IDLER=y
 # CONFIG_DEVFREQ_GOV_MSM_CACHE_HWMON is not set
 # CONFIG_DEVFREQ_GOV_SPDM_HYP is not set
 
@@ -3957,10 +3952,7 @@ CONFIG_QUOTACTL=y
 # CONFIG_AUTOFS4_FS is not set
 CONFIG_FUSE_FS=y
 # CONFIG_CUSE is not set
-CONFIG_DYNAMIC_FSYNC=y
-CONFIG_STATE_NOTIFIER=y
-CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
-CONFIG_QUICK_WAKEUP=y
+
 #
 # Caches
 #
@@ -4002,8 +3994,6 @@ CONFIG_SDFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:vfat:s0"
 # CONFIG_SDFAT_DBG_MSG is not set
 CONFIG_SDFAT_STATISTICS=y
 
-#FRANDOM Generator
-CONFIG_FRANDOM=y
 #
 # Pseudo filesystems
 #
