--- a/arch/arm64/configs/aoscp_h901_defconfig
+++ b/arch/arm64/configs/aoscp_h901_defconfig
@@ -467,7 +467,8 @@ CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
 CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
-CONFIG_CPU_BOOST=y
+# CONFIG_CPU_BOOST is not set
+CONFIG_CPU_INPUT_BOOST=y
 CONFIG_DYNAMIC_STUNE_BOOST=y
 CONFIG_HIMA_HOTPLUG=y
 CONFIG_VOLTAGE_CONTROL=y
@@ -544,6 +545,7 @@ CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_CUBIC=y
 CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_TCP_CONG_CDG=y
 CONFIG_TCP_CONG_HTCP=m
 # CONFIG_TCP_CONG_HSTCP is not set
 # CONFIG_TCP_CONG_HYBLA is not set
@@ -555,9 +557,9 @@ CONFIG_TCP_CONG_HTCP=m
 # CONFIG_TCP_CONG_ILLINOIS is not set
 # CONFIG_DEFAULT_BIC is not set
 # CONFIG_DEFAULT_CUBIC is not set
-CONFIG_DEFAULT_WESTWOOD=y
+# CONFIG_DEFAULT_WESTWOOD is not set
 # CONFIG_DEFAULT_RENO is not set
-CONFIG_DEFAULT_TCP_CONG="westwood"
+CONFIG_DEFAULT_TCP_CONG="cdg"
 # CONFIG_TCP_MD5SIG is not set
 # CONFIG_LGP_DATA_TCPIP_TCP_SYN_RETRY_CONFIG_UPLUS is not set
 CONFIG_IPV6=y
@@ -3728,6 +3730,7 @@ CONFIG_DEVFREQ_GOV_MSM_ADRENO_TZ=y
 CONFIG_MSM_BIMC_BWMON=y
 CONFIG_DEVFREQ_GOV_MSM_GPUBW_MON=y
 CONFIG_DEVFREQ_GOV_MSM_BW_HWMON=y
+CONFIG_ADRENO_IDLER=y
 # CONFIG_DEVFREQ_GOV_MSM_CACHE_HWMON is not set
 # CONFIG_DEVFREQ_GOV_SPDM_HYP is not set
 
@@ -3959,6 +3962,10 @@ CONFIG_QUOTACTL=y
 CONFIG_FUSE_FS=y
 # CONFIG_CUSE is not set
 
+CONFIG_DYNAMIC_FSYNC=y
+CONFIG_STATE_NOTIFIER=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+CONFIG_QUICK_WAKEUP=y
 #
 # Caches
 #
@@ -3999,6 +4006,9 @@ CONFIG_SDFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:vfat:s0"
 # CONFIG_SDFAT_DEBUG is not set
 # CONFIG_SDFAT_DBG_MSG is not set
 CONFIG_SDFAT_STATISTICS=y
+
+#FRANDOM Generator
+CONFIG_FRANDOM=y
 
 #
 # Pseudo filesystems
