defconfig: Enable and allow the use of ExFat and VFat for all variants
*SDfat can't be used currently together with Exfat. It's one or the other.

Change-Id: I8ba1331721fa4f8d5456ccc5b7b04887323fb57c

--- a/arch/arm64/configs/aoscp_h815_defconfig
+++ b/arch/arm64/configs/aoscp_h815_defconfig
@@ -3969,10 +3969,10 @@ CONFIG_FUSE_FS=y
 #
 CONFIG_FAT_FS=y
 # CONFIG_MSDOS_FS is not set
-# CONFIG_VFAT_FS is not set
+CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
-# CONFIG_EXFAT_FS is not set
+CONFIG_EXFAT_FS=y
 CONFIG_EXFAT_DEFAULT_CODEPAGE=437
 CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
 # CONFIG_EXFAT_VIRTUAL_XATTR is not set
@@ -3980,7 +3980,7 @@ CONFIG_EXFAT_DISCARD=y
 CONFIG_EXFAT_COMPAT_TUXERA=y
 # CONFIG_EXFAT_DEBUG is not set
 # CONFIG_NTFS_FS is not set
-CONFIG_SDFAT_FS=y
+# CONFIG_SDFAT_FS is not set
 CONFIG_SDFAT_USE_FOR_EXFAT=y
 CONFIG_SDFAT_USE_FOR_VFAT=y
 CONFIG_SDFAT_DELAYED_META_DIRTY=y
