--- a/arch/arm64/configs/aoscp_h901_defconfig
+++ b/arch/arm64/configs/aoscp_h901_defconfig
@@ -3982,10 +3982,10 @@ CONFIG_QUICK_WAKEUP=y
 #
 CONFIG_FAT_FS=y
 # CONFIG_MSDOS_FS is not set
-# CONFIG_VFAT_FS is not set
+CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
-# CONFIG_EXFAT_FS is not set
+CONFIG_EXFAT_FS=y
 CONFIG_EXFAT_DEFAULT_CODEPAGE=437
 CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
 # CONFIG_EXFAT_VIRTUAL_XATTR is not set
@@ -3993,7 +3993,7 @@ CONFIG_EXFAT_DISCARD=y
 CONFIG_EXFAT_COMPAT_TUXERA=y
 # CONFIG_EXFAT_DEBUG is not set
 # CONFIG_NTFS_FS is not set
-CONFIG_SDFAT_FS=y
+# CONFIG_SDFAT_FS is not set
 CONFIG_SDFAT_USE_FOR_EXFAT=y
 CONFIG_SDFAT_USE_FOR_VFAT=y
 CONFIG_SDFAT_DELAYED_META_DIRTY=y
